--- a/freysoft/package.json
+++ b/freysoft/package.json
@@ -48,6 +48,7 @@
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.32.2",
+    "prettier": "2.8.8",
     "react-router-dom": "^6.11.2",
     "typescript": "*"
   }
